--- a/Front/src/index.html
+++ b/Front/src/index.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
 	<title>Modèle React</title>
 </head>
-<body id="body">
-
+<body>
+	<div id="root"></div>
 </body>
 </html>
